Fix misaligned headers #316

--- a/backend/frontend/src/components/header/header.css
+++ b/backend/frontend/src/components/header/header.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;600;700&display=swap');
 
-
 .App {
     text-align: center;
   }
@@ -115,3 +114,8 @@
     margin-left: auto;
     font-family: 'Josefin Sans', sans-serif;
   }
+
+.container {
+  align-items: center;
+  text-align: center;
+}
